[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/camera2D_control.gd" type="Script" id=2]
[ext_resource path="res://scenes/ComponentMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Map.gd" type="Script" id=4]
[ext_resource path="res://scripts/SimulationButton.gd" type="Script" id=5]
[ext_resource path="res://scripts/SaveButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/LoadButton.gd" type="Script" id=7]
[ext_resource path="res://images/UI/ui_stop.png" type="Texture" id=8]
[ext_resource path="res://images/UI/ui_play.png" type="Texture" id=9]
[ext_resource path="res://images/UI/ui_next_step.png" type="Texture" id=10]
[ext_resource path="res://images/UI/ui_stop_pressed.png" type="Texture" id=11]
[ext_resource path="res://images/UI/ui_next_step_pressed.png" type="Texture" id=12]
[ext_resource path="res://images/UI/ui_play_pressed.png" type="Texture" id=13]

[node name="MainGame" type="Node2D" groups=[
"MainGame",
]]

[node name="HUD" type="CanvasLayer" parent="." groups=[
"HUD",
]]

[node name="ComponentMenu" parent="HUD" groups=[
"ComponentMenu",
] instance=ExtResource( 3 )]
position = Vector2( 512, 560 )

[node name="SimulationButton" type="Button" parent="HUD" groups=[
"Simulation",
]]
margin_left = 780.0
margin_top = 540.0
margin_right = 860.0
margin_bottom = 580.0
toggle_mode = true
text = "Simulate"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="HUD/SimulationButton"]
margin_left = 90.0
margin_top = 4.0
margin_right = 218.0
margin_bottom = 132.0
rect_scale = Vector2( 0.25, 0.25 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="TextureButton" parent="HUD/SimulationButton"]
margin_left = 132.0
margin_top = 4.0
margin_right = 260.0
margin_bottom = 132.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepButton" type="TextureButton" parent="HUD/SimulationButton"]
margin_left = 174.0
margin_top = 4.0
margin_right = 302.0
margin_bottom = 132.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HUD"]
margin_left = 40.0
margin_top = 540.0
margin_right = 100.0
margin_bottom = 580.0
text = "save"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="HUD"]
margin_left = 120.0
margin_top = 540.0
margin_right = 180.0
margin_bottom = 580.0
text = "load"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="HUD" groups=[
"SaveDialog",
]]
margin_left = 312.0
margin_top = 160.0
margin_right = 712.0
margin_bottom = 410.0
rect_min_size = Vector2( 400, 250 )
window_title = "保存文件"
access = 1
filters = PoolStringArray( "*.dat ; data file" )
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadDialog" type="FileDialog" parent="HUD" groups=[
"LoadDialog",
]]
margin_left = 312.0
margin_top = 160.0
margin_right = 712.0
margin_bottom = 410.0
rect_min_size = Vector2( 400, 250 )
window_title = "打开单个文件"
mode = 0
access = 1
filters = PoolStringArray( "*.dat ; data file" )
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoDisplay" type="Label" parent="HUD" groups=[
"InfoDisplay",
]]
margin_left = 362.0
margin_top = 20.0
margin_right = 662.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 40 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 60, 90 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"Camera",
]]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="Map" type="Node2D" parent="." groups=[
"Map",
]]
script = ExtResource( 4 )
